# Biotite

./: .gitignore  README.md  analysis_options.yaml  justfile  pubspec.yaml
android/: .gitignore
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/biotite/: MainActivity.kt
ios/: .gitignore
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: ffi.dart  main.dart
linux/: CMakeLists.txt  my_application.cc
macos/: .gitignore
macos/Runner/: AppDelegate.swift  bridge_generated.h
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: .gitignore  Cargo.toml
rust/rust.xcodeproj/: project.pbxproj
rust/rust.xcodeproj/project.xcworkspace/xcuserdata/anosatsuk124.xcuserdatad/: UserInterfaceState.xcuserstate
rust/rust.xcodeproj/xcuserdata/anosatsuk124.xcuserdatad/xcschemes/: xcschememanagement.plist
rust/src/: api.rs  lib.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt  rust.cmake
windows/runner/: Runner.rc  main.cpp
