[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "1"

once_cell = "1.15.0"

rhai = { version = "1.10.1", features = [ "sync" ] }

comrak = "0.14"
syntect = "5.0.0"

